@@ -1,3 +1,4 @@
+2014-11-03 Fixed saving visibility in Paragraph and Paragraph Keyboard modules
 2014-11-03 Fixed setting width in IWB Toolbar module
 2014-11-03 Added isAttempted method to Math module
 2014-10-30 New Addon - Paragraph eKeyboard
